[project]
name = "webpage-md-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "markdownify>=1.2.2",
    "selenium>=4.40.0",
    "webdriver-manager>=4.0.2",
]
